--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli": "^3.7.0",
     "core-js": "^2.6.5",
+    "g": "^2.0.1",
     "less": "3.9.0",
     "less-loader": "4.1.0",
+    "npm": "^6.9.0",
     "uikit": "3.0.3",
     "vue": "^2.6.6",
+    "vue-directive-long-press": "1.1.0",
     "vuex": "3.1.0"
   },
   "devDependencies": {
